syntax = "proto3";

package key_manager;

message GetOrCreateKeyRequest {
    // Contract ID
    bytes contract_id = 1;
}

message GetOrCreateKeyResponse {
    // Key in clear text. Note that keys can be sent like this as the
    // key manager requires a mutually authenticated secure channel.
    bytes key = 1;
}
